Bug 520178 - Minimized windows appear offscreen when restoring from session store. r=dougt.